0.1.2

2022-12-22  Brecht Sanders  https://github.com/brechtsanders/

  * configure CI using GitHub Actions

0.1.1

2022-12-22  Brecht Sanders  https://github.com/brechtsanders/

  * cdba_prep_get_column_name() now returns char* instead of const char*
  * added cdba_free() to deallocate returned char* results

0.1.0

2022-12-21  Brecht Sanders  https://github.com/brechtsanders/

  * initial open source release